Fixed homepage alignment issues

--- a/src/css/flex.css
+++ b/src/css/flex.css
@@ -26,3 +26,7 @@
 .justify-end {
     justify-content: end;
 }
+
+.wrap {
+    flex-wrap: wrap;
+}
