--- a/src/utils.css
+++ b/src/utils.css
@@ -77,3 +77,16 @@
 .list-none {
     list-style: none;
 }
+
+/* Gap */
+.gap-1 {
+    gap: 1rem;
+}
+
+.gap-2 {
+    gap: 2rem;
+}
+
+.gap-3 {
+    gap: 3rem;
+}
